Switched to CUDA 12.4 build only

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,13 +16,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [cuda11, cuda12]
+        build: [cuda12]
         include:
-          - build: cuda11
-            image: nvidia/cuda:11.7.1-devel-ubuntu22.04
-            modeldir: /llamasharp_ci/models_benchmark
           - build: cuda12
-            image: nvidia/cuda:12.1.1-devel-ubuntu22.04
+            image: nvidia/cuda:12.4.0-devel-ubuntu22.04
             modeldir: /llamasharp_ci/models_benchmark
 
     container:
