Fixed compile.yml failing due to renamed CUDA binaries

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -617,7 +617,7 @@ jobs:
       - name: Rearrange Files
         run: |
           # Make all directories at once
-          mkdir --parents deps/{noavx,avx,avx2,avx512,linux-arm64,musl-noavx,musl-avx,musl-avx2,musl-avx512,osx-arm64,osx-x64,osx-x64-rosetta2,cu11.7.1,cu12.2.0,vulkan,android-arm64-v8a,android-x86,android-x86_64}
+          mkdir --parents deps/{noavx,avx,avx2,avx512,linux-arm64,musl-noavx,musl-avx,musl-avx2,musl-avx512,osx-arm64,osx-x64,osx-x64-rosetta2,cu12.4.0,vulkan,android-arm64-v8a,android-x86,android-x86_64}
 
           # Linux
           cp artifacts/ggml-bin-linux-noavx-x64.so/libggml.so           deps/noavx/libggml.so
@@ -745,11 +745,11 @@ jobs:
           cp artifacts/llama-bin-win-cublas-cu11.7.1-x64.dll/llama.dll          deps/cu11.7.1/llama.dll
           cp artifacts/mtmd-bin-win-cublas-cu11.7.1-x64.dll/mtmd.dll            deps/cu11.7.1/mtmd.dll
           
-          cp artifacts/ggml-bin-win-cublas-cu12.2.0-x64.dll/ggml.dll            deps/cu12.2.0/ggml.dll
-          cp artifacts/ggml-base-bin-win-cublas-cu12.2.0-x64.dll/ggml-base.dll  deps/cu12.2.0/ggml-base.dll
-          cp artifacts/ggml-cuda-bin-win-cublas-cu12.2.0-x64.dll/ggml-cuda.dll  deps/cu12.2.0/ggml-cuda.dll
-          cp artifacts/llama-bin-win-cublas-cu12.2.0-x64.dll/llama.dll          deps/cu12.2.0/llama.dll
-          cp artifacts/mtmd-bin-win-cublas-cu12.2.0-x64.dll/mtmd.dll            deps/cu12.2.0/mtmd.dll
+          cp artifacts/ggml-bin-win-cublas-cu12.4.0-x64.dll/ggml.dll            deps/cu12.4.0/ggml.dll
+          cp artifacts/ggml-base-bin-win-cublas-cu12.4.0-x64.dll/ggml-base.dll  deps/cu12.4.0/ggml-base.dll
+          cp artifacts/ggml-cuda-bin-win-cublas-cu12.4.0-x64.dll/ggml-cuda.dll  deps/cu12.4.0/ggml-cuda.dll
+          cp artifacts/llama-bin-win-cublas-cu12.4.0-x64.dll/llama.dll          deps/cu12.4.0/llama.dll
+          cp artifacts/mtmd-bin-win-cublas-cu12.4.0-x64.dll/mtmd.dll            deps/cu12.4.0/mtmd.dll
 
           # Linux CUDA
           cp artifacts/ggml-bin-linux-cublas-cu11.7.1-x64.so/libggml.so              deps/cu11.7.1/libggml.so
@@ -758,11 +758,11 @@ jobs:
           cp artifacts/llama-bin-linux-cublas-cu11.7.1-x64.so/libllama.so            deps/cu11.7.1/libllama.so
           cp artifacts/mtmd-bin-linux-cublas-cu11.7.1-x64.so/libmtmd.so              deps/cu11.7.1/libmtmd.so
 
-          cp artifacts/ggml-bin-linux-cublas-cu12.2.0-x64.so/libggml.so              deps/cu12.2.0/libggml.so
-          cp artifacts/ggml-base-bin-linux-cublas-cu12.2.0-x64.so/libggml-base.so    deps/cu12.2.0/libggml-base.so
-          cp artifacts/ggml-cuda-bin-linux-cublas-cu12.2.0-x64.so/libggml-cuda.so    deps/cu12.2.0/libggml-cuda.so
-          cp artifacts/llama-bin-linux-cublas-cu12.2.0-x64.so/libllama.so            deps/cu12.2.0/libllama.so
-          cp artifacts/mtmd-bin-linux-cublas-cu12.2.0-x64.so/libmtmd.so              deps/cu12.2.0/libmtmd.so
+          cp artifacts/ggml-bin-linux-cublas-cu12.4.0-x64.so/libggml.so              deps/cu12.4.0/libggml.so
+          cp artifacts/ggml-base-bin-linux-cublas-cu12.4.0-x64.so/libggml-base.so    deps/cu12.4.0/libggml-base.so
+          cp artifacts/ggml-cuda-bin-linux-cublas-cu12.4.0-x64.so/libggml-cuda.so    deps/cu12.4.0/libggml-cuda.so
+          cp artifacts/llama-bin-linux-cublas-cu12.4.0-x64.so/libllama.so            deps/cu12.4.0/libllama.so
+          cp artifacts/mtmd-bin-linux-cublas-cu12.4.0-x64.so/libmtmd.so              deps/cu12.4.0/libmtmd.so
 
           # Windows Vulkan
           cp artifacts/ggml-bin-win-vulkan-x64.dll/ggml.dll               deps/vulkan/ggml.dll
