Updated binaries, removed old CUDA11 and replaced 12.2 with 12.4

--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <BinaryReleaseId>ceda28ef8e310_v2</BinaryReleaseId>
+    <BinaryReleaseId>a0374a67e2924f2e</BinaryReleaseId>
   </PropertyGroup>
 
   <PropertyGroup>
