--- a/.github/workflows/update_api_references.yml
+++ b/.github/workflows/update_api_references.yml
@@ -21,7 +21,7 @@ jobs:
     - name: install_tool_and_generate_api_docs
       run: |
         dotnet tool install -g XMLDoc2Markdown
-        dotnet build ./LLama\LLamaSharp.csproj
+        dotnet build ./LLama/LLamaSharp.csproj
         cd LLama/bin/Debug/net8.0
         rm -rf ../../../../docs/xmldocs
         dotnet xmldoc2md LLamaSharp.dll -o ../../../../docs/xmldocs --back-button
