--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -68,7 +68,7 @@
   <!-- When UnzipReleaseBinaries is called, this will run first, as UnzipReleaseBinaries depends on it (check DependsOnTargets of UnzipReleaseBinaries) -->
   <Target Name="DownloadReleaseBinaries">
 	<Message Importance="High" Text="Download '$(BinaryReleaseId)/deps.zip' to 'runtimes'" />
-	<DownloadFile SourceUrl="https://github.com/SciSharp/LLamaSharpBinaries/releases/download/$(BinaryReleaseId)/deps.zip" DestinationFolder="runtimes" DestinationFileName="deps.zip" SkipUnchangedFiles="true" Retries="3" />
+	<DownloadFile SourceUrl="https://github.com/SciSharp/LLamaSharp/actions/runs/17642209540/artifacts/3985677301" DestinationFolder="runtimes" DestinationFileName="deps.zip" SkipUnchangedFiles="true" Retries="3" />
   </Target>
 
   <!-- This automatically runs after CheckReleaseBinaries has completed, but only if SkipDownloadReleaseBinaries is not true -->
