--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -460,11 +460,11 @@ jobs:
       matrix:
         include:
           - build: 'arm64'
-            defines: '-DCMAKE_OSX_ARCHITECTURES=arm64 -DGGML_METAL_EMBED_LIBRARY=ON'
+            defines: '-DCMAKE_OSX_ARCHITECTURES=arm64 -DGGML_METAL_EMBED_LIBRARY=ON -DCMAKE_INSTALL_RPATH=''@loader_path'' -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON '
           - build: 'x64'
-            defines: '-DCMAKE_OSX_ARCHITECTURES=x86_64 -DGGML_METAL=OFF -DGGML_AVX=ON -DGGML_AVX2=ON'
+            defines: '-DCMAKE_OSX_ARCHITECTURES=x86_64 -DGGML_METAL=OFF -DGGML_AVX=ON -DGGML_AVX2=ON -DCMAKE_INSTALL_RPATH=''@loader_path'' -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON '
           - build: 'x64-rosetta2'
-            defines: '-DCMAKE_OSX_ARCHITECTURES=x86_64 -DGGML_METAL=OFF -DGGML_AVX=OFF -DGGML_AVX2=OFF'
+            defines: '-DCMAKE_OSX_ARCHITECTURES=x86_64 -DGGML_METAL=OFF -DGGML_AVX=OFF -DGGML_AVX2=OFF -DCMAKE_INSTALL_RPATH=''@loader_path'' -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON '
     runs-on: macos-latest   
     steps:
       - uses: actions/checkout@v4
