Remove WinUI project from solution on non-Windows runners
Also remove LLama.Examples.WinUI from LLamaSharp.sln in CI
for non-Windows environments, alongside Llama.Mobile. This
ensures platform-specific projects are excluded where not
supported.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
       if: ${{ !contains(runner.os, 'windows') }}
       run: |
         dotnet sln LLamaSharp.sln remove Llama.Mobile
+        dotnet sln LLamaSharp.sln remove LLama.Examples.WinUI/LLama.Examples.WinUI.csproj
     - name: Cache Packages
       uses: actions/cache@v4
       with:
